[project]
name = "siberianodes"
description = "Custom nodes for ComfyUI with Ollama integration for LLM chat, vision analysis, and utilities"
version = "1.0.1"
license = {file = "LICENSE"}

authors = [
    {name = "siberiah0h", email = "siberiah0h@gmail.com"},
]

classifiers = [
    # For OS-independent nodes (works on all operating systems)
    "Operating System :: OS Independent",

    # GPU Accelerator support
    "Environment :: GPU :: NVIDIA CUDA",
    "Environment :: GPU :: Apple Metal",

    # Development status
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Graphics",
]

dependencies = [
    "torch>=1.13.0",
    "numpy>=1.21.0",
    "Pillow>=8.0.0",
    "typing-extensions>=4.0.0",
    "requests>=2.25.0",
    "ollama>=0.1.0",
    "aiohttp>=3.8.0",
    "pyyaml>=6.0",
]

[project.urls]
Repository = "https://github.com/siberiah2o/ComfyUI-SiberiaNodes"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/siberiah2o/ComfyUI-SiberiaNodes/wiki"
"Bug Tracker" = "https://github.com/siberiah2o/ComfyUI-SiberiaNodes/issues"

[tool.comfy]
PublisherId = "siberia"
DisplayName = "ComfyUI-SiberiaNodes"
Icon = ""
includes = []
"requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

